@@ -9,3 +9,4 @@ python-dateutil==2.2
 sphinx_rtd_theme>=0.1.6
 wheel>=0.24.0
 pytimeparse>=1.1.5
+csvkit>=0.9.1
