@@ -6,6 +6,7 @@ deps=
     nose>=1.1.2
     six>=1.6.1
     python-dateutil>=2.2
+    csvkit>=0.9.1
 commands=nosetests
 
 [testenv:py27]
