@@ -1,6 +1,7 @@
 0.8.0
 -----
 
+* Add tests for unicode support. (#138)
 * Fix computations.ZScores calculation. (#123)
 * Differentiate sample and population variance and stdev. (#208)
 * Support for overriding column inference with "force".
